Reorganizing test methods

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,19 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: clang build active file",
-            "command": "/usr/bin/clang",
+            "label": "C/C++: g++.exe build active file",
+            "command": "C:\\msys64\\mingw64\\bin\\g++.exe",
             "args": [
-                "-fcolor-diagnostics",
-                "-fansi-escape-codes",
+                "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "${fileDirname}\\Card\\Card.cpp",
+                "${fileDirname}\\Map\\Map.cpp",
+                "${fileDirname}\\Orders\\Order.cpp",
+                "${fileDirname}\\Player\\Player.cpp",
+                "${fileDirname}\\GameEngine\\GameEngine.cpp",
+                "${fileDirname}\\**.cpp",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
                 "cwd": "${fileDirname}"
