--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,14 @@
     "sstream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "list": "cpp",
+    "xhash": "cpp",
+    "xlocale": "cpp",
+    "xlocinfo": "cpp",
+    "xmemory": "cpp",
+    "xstring": "cpp",
+    "xtree": "cpp",
+    "xutility": "cpp"
   }
 }
