--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,7 @@
 
 *.json
 
-c_cpp_properties.json
-launch.json
-settings.json
-tasks.json
-
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/settings.json
