Final Commit for base functionality

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,12 +7,13 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                // "${fileDirname}\\Card\\Card.cpp",
-                // "${fileDirname}\\Map\\Map.cpp",
-                // "${fileDirname}\\Orders\\Order.cpp",
-                // "${fileDirname}\\Player\\Player.cpp",
-                "${fileDirname}\\..\\GameEngine\\GameEngine.cpp",
-                "${fileDirname}\\**.cpp",
+                "${workspaceFolder}\\CommandProcessing\\CommandProcessing.cpp",
+                "${workspaceFolder}\\Card\\Card.cpp",
+                "${workspaceFolder}\\Map\\Map.cpp",
+                "${workspaceFolder}\\Orders\\Order.cpp",
+                "${workspaceFolder}\\Player\\Player.cpp",
+                "${workspaceFolder}\\GameEngine\\GameEngine.cpp",
+                "${fileDirname}\\CommandProcessingDriver.cpp",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
