--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,6 +140,7 @@
     "mutex": "cpp",
     "ratio": "cpp",
     "stack": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "filesystem": "cpp"
   }
 }
